# fastapi-boilerplate

./: .gitignore  Dockerfile  Makefile  README.md  main.py  mypy.ini  pyproject.toml  pyrightconfig.json
.github/workflows/: app.yml
scripts/: pre-requirements.sh
scripts/hooks/: post-merge  pre-push
src/common/: config.py  logger.py  settings.py
src/delivery/api/v1/health/: health_response.py  health_router.py
src/delivery/api/v1/hello/: hello_response.py  hello_router.py
src/domain/: command.py  exceptions.py  hello_client.py
src/infrastructure/hello/: hello_client.py
src/use_cases/: health_command.py  say_hello_command.py
tests/acceptance/delivery/api/: test_heath_controller.py  test_hello_controller.py
tests/integration/hello/: test_dummy_hello_client_integration.py
tests/unit/acceptance/delivery/api/: test_hello_controller.py
tests/unit/use_cases/: test_health_command.py  test_say_hello_command.py
