[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "This repository is a FastAPI boilerplate to use as a fast starter point"
authors = [
  { name = "Pedro López Mareque", email = "pedro.lopez.mareque@gmail.com" }
]
requires-python = "==3.12.8"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi[standard]>=0.115.0,<0.116",
    "pydantic-settings>=2.5.2,<3",
]

[dependency-groups]
test = [
    "pytest>=8.3.3,<9",
    "pytest-watch>=4.2.0,<5",
    "expects>=0.9.0,<0.10",
    "doublex>=1.9.6.1,<2",
    "coverage>=7.6.1,<8",
    "ruff>=0.6.7,<0.7",
    "ty>=0.0.1a6",
]

[tool.uv]
default-groups = ["test"]
